envoy/envoy.yml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/api/" }
                route: { cluster: backend-flask }
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              http_service:
                path_prefix: /auth
                server_uri:
                  uri: http://jwt-sidecar-nodejs:3001
                  cluster: jwt-sidecar-nodejs
                  timeout: 0.250s
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: Authorization
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: Authorization
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: backend-flask
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend-flask
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-flask
                port_value: 4567
  - name: jwt-sidecar-nodejs
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend-flask
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jwt-sidecar-nodejs
                port_value: 3001
